--- a/index.html
+++ b/index.html
@@ -5,10 +5,77 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mealpass-admin</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      .splash {
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+        background: #d8b79f;
+        align-items: center;
+        justify-content: center;
+        z-index: 10000000;
+        display: flex;
+        overflow: hidden;
+      }
+      .splash .splash-image {
+        width: 100%;
+        animation: background 2s ease;
+      }
+      .splash .logo {
+        position: absolute;
+        background: white;
+        width: 33%;
+        border-radius: 5px;
+        animation: animation 2s ease-in;
+      }
+      @keyframes animation {
+        0% {
+          transform: scale(0.8);
+          opacity: 0.6;
+        }
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+
+      @keyframes background {
+        0% {
+          transform: scale(1.3);
+          opacity: 0.5;
+        }
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+      .hide {
+        display: none !important;
+      }
+    </style>
   </head>
   <body>
+    <div class="splash">
+      <img src="/images/splash.jpg" alt="splash image" class="splash-image" />
+      <img src="/logo.svg" alt="logo" class="logo" />
+    </div>
     <div id="portal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      const splash = document.querySelector(".splash");
+      document.addEventListener("DOMContentLoaded", () => {
+        setTimeout(() => {
+          splash.classList.remove("splash");
+          splash.classList.add("hide");
+          splash.style.zindex = "0";
+        }, 3000);
+      });
+    </script>
   </body>
 </html>
